group mapping update

--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -49,6 +49,6 @@
         <li><a href="./GosthiGroup">Group Master</a></li>
         <li><a href="./Nirikshak">Nirikshak</a></li>
         <li><a href="./GosthiSchedule">Gosthi Schedule</a></li>
-
+        <li><a href="./GroupMemberMapping">Group Member Mapping</a></li>
     </ul>
 </ul>
