--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -38,7 +38,7 @@
 <ul>
     Registration
     <ul>
-        <li><a href="./SevakRegistration">Sevak Registration (to be done by dhruv)</a></li>
+        <li><a href="./SevakRegistration">Sevak Registration</a></li>
     </ul>
 </ul>
 
@@ -46,9 +46,12 @@
 <ul>
     Gosthi
     <ul>
+        <li><a href="./Gosthi" style="color: red;">Gosthi(Pending)</a></li>
+        <li><a href="./Gosthi/createGosthi">New Gosthi (For Admin)</a></li>
         <li><a href="./GosthiGroup">Group Master</a></li>
         <li><a href="./Nirikshak">Nirikshak</a></li>
         <li><a href="./GosthiSchedule">Gosthi Schedule</a></li>
         <li><a href="./GroupMemberMapping">Group Member Mapping</a></li>
+        <li><a href="./GosthiReportSubmission" style="color: red;">Gosthi Report Submission(Pending)</a></li>
     </ul>
 </ul>
