--- a/public/src/View/Gosthi/GroupMemberMapping/list.html
+++ b/public/src/View/Gosthi/GroupMemberMapping/list.html
@@ -70,7 +70,7 @@
 <body>
 
     <h1>Gosthi-Member Mapping</h1>
-    <a class="btn btn-add" href="./manage" style="text-decoration:none">Manage Group</a>
+    <a class="btn btn-add" href="./GroupMemberMapping/manage" style="text-decoration:none">Manage Group</a>
     <br><br>
 
     <table>
