--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -55,3 +55,15 @@
         <li><a href="./GosthiReportSubmission" style="color: red;">Gosthi Report Submission(Pending)</a></li>
     </ul>
 </ul>
+
+<ul>
+    Exam
+    <ul>
+        <li><a href="./ExamDashboard">Dashboard</a></li>
+        <!-- <li><a href="./ExamType">Exam Type</a></li>
+        <li><a href="./Exam">Exam</a></li>
+        <li><a href="./ExamSchedule">Exam Schedule</a></li>
+        <li><a href="./ExamMarkEntry">Exam Mark Entry</a></li>
+        <li><a href="./SevakEvaluation">Sevak Evaluation</a></li> -->
+    </ul>
+</ul>
