--- a/public/src/View/Exam/ExamMarkEntry/list.html
+++ b/public/src/View/Exam/ExamMarkEntry/list.html
@@ -59,7 +59,7 @@
 <body>
 
     <h1>Exam Mark Entry</h1>
-    <a style="text-decoration: none;" class="btn btn-add" href="./add">+ Add Mark Entry</a>
+    <a style="text-decoration: none;" class="btn btn-add" href="./ExamMarkEntry/add">+ Add Mark Entry</a>
 
     <br> <br>
     <div id="indexData">
