--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -62,3 +62,10 @@
         <li><a href="./ExamDashboard">Dashboard</a></li>
     </ul>
 </ul>
+
+<ul>
+    My Batchmate
+    <ul>
+        <li><a href="./MyBatchmate">My Batchmate</a></li>
+    </ul>
+</ul>
