exam module is over with reports

--- a/public/src/View/Exam/Dashboard/list.html
+++ b/public/src/View/Exam/Dashboard/list.html
@@ -5,4 +5,6 @@
     <li><a href="./ExamSchedule">Exam Schedule</a></li>
     <li><a href="./ExamMarkEntry">Exam Mark Entry</a></li>
     <li><a href="./SevakEvaluation">Sevak Evaluation</a></li>
+    <li><a href="./ExamWiseSubjectReport">Exam Wise Subject Report</a></li>
+    <li><a href="./AllExamMarksReport">All Exam Report</a></li>
 </ul>
