sevak registration done

--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -38,7 +38,8 @@
 <ul>
     Registration
     <ul>
-        <li><a href="./SevakRegistration">Sevak Registration</a></li>
+        <li><a href="./SevakRegistration">View Sevak</a></li>
+        <li><a href="./SevakRegistration/add">Add Sevak</a></li>
     </ul>
 </ul>
 
