edit sevak not working

--- a/public/src/View/SevakRegistration/SevakRegistration.html
+++ b/public/src/View/SevakRegistration/SevakRegistration.html
@@ -24,7 +24,7 @@
             <br>
 
             <label for="ytk_id">YTK ID:</label>
-            <input type="text" id="ytk_id" readonly>
+            <input type="text" id="ytk_id" name="ytk_id">
             <br><br>
 
             <label>First Name:</label>
@@ -308,7 +308,7 @@
                     <select name="ins_by_city_id" id="ins_by_city_id"></select> <br>
 
                     <label for="ins_by_mobile">Mobile No : </label>
-                    <select name="ins_by_mobile_country_code" id="ins_by_country_code"></select>
+                    <select name="ins_by_country_code" id="ins_by_country_code"></select>
 
                     <input type="number" name="ins_by_mobile" id="ins_by_mobile"
                         title="Please Enter 10 Digit Your Mobile No" placeholder="Mobile No">
