--- a/public/src/View/SevakRegistration/viewSevak.html
+++ b/public/src/View/SevakRegistration/viewSevak.html
@@ -68,6 +68,7 @@
 </head>
 
 <body>
+
     <!-- Modals -->
     <div class="modal fade" id="overAllRemarkModel" role="dialog">
         <div class="modal-dialog modal-sm">
@@ -104,6 +105,12 @@
             </div>
         </div>
     </div>
+
+    <br>
+
+    <a href="./SevakRegistration.html" class="btn btn-add" style="text-decoration: none;">Add Sevak</a>
+    <br><br>
+    <hr>
 
 
 
@@ -235,7 +242,6 @@
     <div id="searchingListTb">
         <!-- Filtered results will be loaded here -->
     </div>
-
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
