--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -41,6 +41,11 @@
         <li><a href="./SevakRegistration">View Sevak</a></li>
         <li><a href="./SevakRegistration/add">Add Sevak</a></li>
     </ul>
+    Reports
+    <ul>
+        <li><a href="./SevakReports/sevakRegisterReport">Sevak Register Report</a></li>
+        <li><a href="./SevakReports/SantNirdeshakReport">SantNirdeshakReport</a></li>
+    </ul>
 </ul>
 
 
