--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -1,77 +1,86 @@
 <ul>
-    Master
-    <ul style="list-style-type:circle;">
-        <li><a href="./country">Country </a></li>
-        <li><a href="./state">State </a></li>
-        <li><a href="./district">District </a></li>
-        <li><a href="./taluka">Taluka </a></li>
-        <li><a href="./city">City / Village</a></li>
-        <li><a href="./CityArea">City Area</a></li>
-        <li><a href="./pincode">Pincode</a></li>
-        <br>
-        <li><a href="./caste">Caste </a></li>
-        <li><a href="./category">Category </a></li>
-        <li><a href="./blood_group">Blood Group </a></li>
-        <li><a href="./marital_status">Marital Status </a></li>
-        <li><a href="./relationship">Relationship </a></li>
-        <li><a href="./employment">Employment </a></li>
-        <br>
-        <li><a href="./talim_batch">Talim Batch </a></li>
-        <li><a href="./room">Room </a></li>
-        <li><a href="./degree">Degree </a></li>
-        <li><a href="./specialization">Specialization </a></li>
-        <li><a href="./grade">Grade </a></li>
-        <li><a href="./talent">Talent </a></li>
-        <br>
-        <li><a href="./zone">Zone</a></li>
-        <li><a href="./mandir">Mandir</a></li>
-        <li><a href="./santnirdeshak">Sant Nirdeshak</a></li>
-        <li><a href="./nirdeshak">Nirdeshak</a></li>
-        <li><a href="./kshetra">Kshetra</a></li>
-        <li><a href="./satsang_activity">Satsang Activity</a></li>
-        <li><a href="./satsang_designation">Satsang Designation</a></li>
-        <li><a href="./sant_karyakar_designation">Sant Karyakar Designation</a></li>
-        <li><a href="./gosthi_type">Add gosthi type</a></li>
-    </ul>
+  Master
+  <ul style="list-style-type: circle">
+    <li><a href="./country">Country </a></li>
+    <li><a href="./state">State </a></li>
+    <li><a href="./district">District </a></li>
+    <li><a href="./taluka">Taluka </a></li>
+    <li><a href="./city">City / Village</a></li>
+    <li><a href="./CityArea">City Area</a></li>
+    <li><a href="./pincode">Pincode</a></li>
+    <br />
+    <li><a href="./caste">Caste </a></li>
+    <li><a href="./category">Category </a></li>
+    <li><a href="./blood_group">Blood Group </a></li>
+    <li><a href="./marital_status">Marital Status </a></li>
+    <li><a href="./relationship">Relationship </a></li>
+    <li><a href="./employment">Employment </a></li>
+    <br />
+    <li><a href="./talim_batch">Talim Batch </a></li>
+    <li><a href="./room">Room </a></li>
+    <li><a href="./degree">Degree </a></li>
+    <li><a href="./specialization">Specialization </a></li>
+    <li><a href="./grade">Grade </a></li>
+    <li><a href="./talent">Talent </a></li>
+    <br />
+    <li><a href="./zone">Zone</a></li>
+    <li><a href="./mandir">Mandir</a></li>
+    <li><a href="./santnirdeshak">Sant Nirdeshak</a></li>
+    <li><a href="./nirdeshak">Nirdeshak</a></li>
+    <li><a href="./kshetra">Kshetra</a></li>
+    <li><a href="./satsang_activity">Satsang Activity</a></li>
+    <li><a href="./satsang_designation">Satsang Designation</a></li>
+    <li><a href="./sant_karyakar_designation">Sant Karyakar Designation</a></li>
+    <li><a href="./gosthi_type">Add gosthi type</a></li>
+  </ul>
 </ul>
 
 <ul>
-    Registration
-    <ul>
-        <li><a href="./SevakRegistration">View Sevak</a></li>
-        <li><a href="./SevakRegistration/add">Add Sevak</a></li>
-    </ul>
-    Reports
-    <ul>
-        <li><a href="./SevakReports/sevakRegisterReport">Sevak Register Report</a></li>
-        <li><a href="./SevakReports/SantNirdeshakReport">SantNirdeshakReport</a></li>
-    </ul>
-</ul>
-
-
-<ul>
-    Gosthi
-    <ul>
-        <li><a href="./Gosthi" style="color: red;">Gosthi(Pending)</a></li>
-        <li><a href="./Gosthi/createGosthi">New Gosthi (For Admin)</a></li>
-        <li><a href="./GosthiGroup">Group Master</a></li>
-        <li><a href="./Nirikshak">Nirikshak</a></li>
-        <li><a href="./GosthiSchedule">Gosthi Schedule</a></li>
-        <li><a href="./GroupMemberMapping">Group Member Mapping</a></li>
-        <li><a href="./GosthiReportSubmission" style="color: red;">Gosthi Report Submission(Pending)</a></li>
-    </ul>
+  Registration
+  <ul>
+    <li><a href="./SevakRegistration">View Sevak</a></li>
+    <li><a href="./SevakRegistration/add">Add Sevak</a></li>
+    <li><a href="./SevakRegistration/NoneSevak">Add None Sevak</a></li>
+    <li><a href="./SevakRegistration/ViewNoneSevak">View None Sevak</a></li>
+  </ul>
+  Reports
+  <ul>
+    <li><a href="./SevakReports/sevakRegisterReport">SevakRegisterReport</a></li>
+    <li><a href="./SevakReports/SantNirdeshakReport">SantNirdeshakReport</a></li>
+    <li><a href="./SevakReports/KshetraWiseImageReport" style="color: red">KshetraWiseImageReport (Pending)</a></li>
+    <li><a href="./SevakReports/BirthDateWiseReport">BirthDateWiseReport</a></li>
+    <li><a href="./SevakReports/TalentReport">TalentReport</a></li>
+    <li><a href="./SevakReports/EducationWiseImageReport" style="color: red">EducationWiseImageReport (Pending)</a></li>
+    <li><a href="./SevakReports/SantParshadImageReport" style="color: red">Sant Parshad Image Report (Pending)</a></li>
+    <li><a href="./SevakReports/santparshadreport">santparshad report (Pending)</a></li>
+    <li><a href="./SevakReports/inspiredbyreport" style="color: red">inspired by report (Pending)</a></li>
+    <li><a href="./SevakReports/SevakIdWiseImageReport" style="color: red">SevakIdWiseImageReport (Pending)</a></li>
+  </ul>
 </ul>
 
 <ul>
-    Exam
-    <ul>
-        <li><a href="./ExamDashboard">Dashboard</a></li>
-    </ul>
+  Gosthi
+  <ul>
+    <li><a href="./Gosthi" style="color: red">Gosthi(Pending)</a></li>
+    <li><a href="./Gosthi/createGosthi">New Gosthi (For Admin)</a></li>
+    <li><a href="./GosthiGroup">Group Master</a></li>
+    <li><a href="./Nirikshak">Nirikshak</a></li>
+    <li><a href="./GosthiSchedule">Gosthi Schedule</a></li>
+    <li><a href="./GroupMemberMapping">Group Member Mapping</a></li>
+    <li><a href="./GosthiReportSubmission" style="color: red">Gosthi ReportSubmission(Pending)</a></li>
+  </ul>
 </ul>
 
 <ul>
-    My Batchmate
-    <ul>
-        <li><a href="./MyBatchmate">My Batchmate</a></li>
-    </ul>
+  Exam
+  <ul>
+    <li><a href="./ExamDashboard">Dashboard</a></li>
+  </ul>
+</ul>
+
+<ul>
+  My Batchmate
+  <ul>
+    <li><a href="./MyBatchmate">My Batchmate</a></li>
+  </ul>
 </ul>
