--- a/public/src/View/SevakRegistration/viewSevak.html
+++ b/public/src/View/SevakRegistration/viewSevak.html
@@ -68,54 +68,15 @@
 </head>
 
 <body>
-
-    <!-- Modals -->
-    <div class="modal fade" id="overAllRemarkModel" role="dialog">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header bg-info">
-                    <h4 class="modal-title white">Overall Grade Remark</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body" id="gradeRemarktb"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="sevakPasswordModel" role="dialog" data-backdrop="static" data-keyboard="false">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header bg-info">
-                    <h4 class="modal-title white">Verify Sevak Password</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body" id="sevakPasswordtb"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="CurrentSevakModel" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header bg-info">
-                    <h4 class="modal-title white">Sevak Detail</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body" id="sevakDetailtb"></div>
-            </div>
-        </div>
-    </div>
-
     <br>
+
+
 
     <a href="./SevakRegistration.html" class="btn btn-add" style="text-decoration: none;">Add Sevak</a>
     <br><br>
     <hr>
 
-
-
     <form id="filterForm" name="filterForm">
-
 
         <fieldset class="radio">
             <label>
@@ -123,7 +84,6 @@
                 <b>View All Sevak</b>
             </label>
         </fieldset>
-
 
         <fieldset class="radio">
             <label>
@@ -134,10 +94,8 @@
 
         <div id="filterSevak" style="display:none;">
 
-
             <label><b>Talim Batch</b></label>
             <select class="form-control" name="talim_batch_id" id="talim_batch_id"></select>
-
 
             <label><b>Degree</b></label>
             <select class="form-control" name="degree_id" id="degree_id"></select>
@@ -147,48 +105,46 @@
 
             <label><b>District</b></label>
             <select class="form-control" name="district_id" id="district_id"></select>
+
+            <label><b>Grade</b></label>
+            <select class="form-control" name="grade_id" id="grade_id"></select>
+
+            <label><b>Marital Status</b></label>
+            <select class="form-control" name="marital_status_id" id="marital_status_id"></select>
+
+            <label><b>Mandir</b></label>
+            <select class="form-control" name="mandir" id="mandir"></select>
+
+            <label><b>Region</b></label>
+            <select class="form-control" name="zone_id" id="zone_id"></select>
+
+            <label><b>Occupation</b></label>
+            <select class="form-control" name="employment_id" id="employment_id"></select>
+
+            <label><b>Satsang Activity</b></label>
+            <select class="form-control" name="satsang_activity_id" id="satsang_activity_id"></select>
+
+            <label><b>Satsang Designation</b></label>
+            <select class="form-control" name="satsang_designation_id" id="satsang_designation_id"></select>
+
+            <label><b>Kshetra</b></label>
+            <select class="form-control" name="kshetra_id" id="kshetra_id"></select>
+
+            <label><b>Specialization</b></label>
+            <select class="form-control" name="specialization_id" id="specialization_id"></select>
+
+            <label><b>Goshthi Group</b></label>
+            <select class="form-control" name="group_id" id="group_id"></select>
+
+            <label><b>Sevak Status</b></label>
+            <select class="form-control" name="status" id="status"></select>
+
+            <button type="button" style="margin-top: 32px" id="searchBtn" class="btn mr-1 btn-primary btn-sm">
+                <i class="fa fa-search"></i> Search
+            </button>
+
         </div>
-
-
-        <label><b>Grade</b></label>
-        <select class="form-control" name="grade_id" id="grade_id"></select>
-
-        <label><b>Marital Status</b></label>
-        <select class="form-control" name="marital_status_id" id="marital_status_id"></select>
-
-        <label><b>Mandir</b></label>
-        <select class="form-control" name="mandir" id="mandir"></select>
-
-        <label><b>Region</b></label>
-        <select class="form-control" name="zone_id" id="zone_id"></select>
-
-
-        <label><b>Occupation</b></label>
-        <select class="form-control" name="employment_id" id="employment_id"></select>
-
-        <label><b>Satsang Activity</b></label>
-        <select class="form-control" name="satsang_activity_id" id="satsang_activity_id"></select>
-
-        <label><b>Satsang Designation</b></label>
-        <select class="form-control" name="satsang_designation_id" id="satsang_designation_id"></select>
-
-        <label><b>Kshetra</b></label>
-        <select class="form-control" name="kshetra_id" id="kshetra_id"></select>
-
-        <label><b>Specialization</b></label>
-        <select class="form-control" name="specialization_id" id="specialization_id"></select>
-
-        <label><b>Goshthi Group</b></label>
-        <select class="form-control" name="group_id" id="group_id"></select>
-        </div>
-
-        <label><b>Sevak Status</b></label>
-        <select class="form-control" name="status" id="status"></select>
-
-        <button type="button" style="margin-top: 32px" id="searchBtn" class="btn mr-1 btn-primary btn-sm">
-            <i class="fa fa-search"></i> Search
-        </button>
-    </form>
+    </form> <br>
 
     <!-- DataTables -->
     <div id="allSevakListTb">
@@ -240,7 +196,6 @@
     </div>
     </div>
     <div id="searchingListTb">
-        <!-- Filtered results will be loaded here -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
