--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -52,9 +52,9 @@
     <li><a href="./SevakReports/TalentReport">TalentReport</a></li>
     <li><a href="./SevakReports/EducationWiseImageReport" style="color: red">EducationWiseImageReport (Pending)</a></li>
     <li><a href="./SevakReports/SantParshadImageReport" style="color: red">Sant Parshad Image Report (Pending)</a></li>
-    <li><a href="./SevakReports/santparshadreport">santparshad report (Pending)</a></li>
-    <li><a href="./SevakReports/inspiredbyreport" style="color: red">inspired by report (Pending)</a></li>
-    <li><a href="./SevakReports/SevakIdWiseImageReport" style="color: red">SevakIdWiseImageReport (Pending)</a></li>
+    <li><a href="./SevakReports/santparshadreport">Sant Parshad Report</a></li>
+    <li><a href="./SevakReports/inspiredbyreport">Inspired By Report </a></li>
+    <li><a href="./SevakReports/SevakIdWiseImageReport">SevakIdWiseImage Report</a></li>
   </ul>
 </ul>
 
